<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.ge.predix.solsvc</groupId>
	<artifactId>ref-app-analytic-cf</artifactId>
	<version>1.1.0</version>
	<packaging>jar</packaging>

	<description>Calculate asset health levels </description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.2.3.RELEASE</version>
		<relativePath />
		<!-- lookup parent from repository -->
	</parent>

	<properties>
		<commons-io.version>1.4</commons-io.version>
		<analytics-utils.version>1.0.1-SNAPSHOT</analytics-utils.version>
		<ext-interface.version>1.7.0</ext-interface.version>
		<ext-model.version>1.7.0</ext-model.version>
		<ext-util.version>1.7.0</ext-util.version>
		<predix-rest-client.version>1.2.0</predix-rest-client.version>
		<jackson-mapper-asl.version>1.9.13</jackson-mapper-asl.version>
		<fdh-bootstrap-client.version>1.5.0</fdh-bootstrap-client.version>
		<fdh-router-cf.version>1.5.0</fdh-router-cf.version>
		<asset-bootstrap-client.version>1.2.0</asset-bootstrap-client.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
		<maven-failsafe-plugin.version>2.17</maven-failsafe-plugin.version>
		<maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.ge.predix.solsvc</groupId>
			<artifactId>ext-interface</artifactId>
			<version>${ext-interface.version}</version>
		</dependency>
		<dependency>
			<groupId>com.ge.predix.solsvc</groupId>
			<artifactId>ext-model</artifactId>
			<version>${ext-model.version}</version>
		</dependency>
		<dependency>
			<groupId>com.ge.predix.solsvc</groupId>
			<artifactId>ext-util</artifactId>
			<version>${ext-util.version}</version>
		</dependency>
		<dependency>
			<groupId>com.ge.predix.solsvc</groupId>
			<artifactId>fdh-bootstrap-client</artifactId>
			<version>${fdh-bootstrap-client.version}</version>
		</dependency>
		<dependency>
			<groupId>com.ge.predix.solsvc</groupId>
			<artifactId>asset-bootstrap-client</artifactId>
			<version>${asset-bootstrap-client.version}</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>${jackson-mapper-asl.version}</version>
		</dependency>
		<dependency>
			<groupId>com.ge.predix.solsvc</groupId>
			<artifactId>predix-rest-client</artifactId>
			<version>${predix-rest-client.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>log4j-over-slf4j</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<artifactId>logback-classic</artifactId>
			<groupId>ch.qos.logback</groupId>
			<version>${logback.version}</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy</artifactId>
			<version>${groovy.version}</version>
		</dependency>


		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.ge.predix.solsvc</groupId>
			<artifactId>fdh-router-cf</artifactId>
			<version>${fdh-router-cf.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
                		<groupId>org.codehaus.mojo</groupId>
                		<artifactId>versions-maven-plugin</artifactId>
                		<version>2.2</version>
            		</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${maven-failsafe-plugin.version}</version>
				<executions>
					<execution>
						<id>run-tests</id>
						<phase>integration-test</phase>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>testharness</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>${maven-surefire-plugin.version}</version>
						<dependencies>
							<dependency>
								<groupId>org.apache.maven.surefire</groupId>
								<artifactId>surefire-junit4</artifactId>
								<version>${maven-surefire-plugin.version}</version>
							</dependency>
						</dependencies>
						<configuration>
							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>${maven-failsafe-plugin.version}</version>
						<executions>
							<execution>
								<id>run-tests</id>
								<phase>integration-test</phase>
								<goals>
									<goal>integration-test</goal>
									<goal>verify</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<systemProperties>

							</systemProperties>
							<includes>
								<include>**/*TestHarness.java</include>
							</includes>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
